--- a/requirements.txt
+++ b/requirements.txt
@@ -1,232 +1,6 @@
-aiofiles @ file:///home/conda/feedstock_root/build_artifacts/aiofiles_1664378549280/work
-aiosqlite @ file:///home/conda/feedstock_root/build_artifacts/aiosqlite_1671461885930/work
-alembic @ file:///home/conda/feedstock_root/build_artifacts/alembic_1676600333151/work
-altair @ file:///home/conda/feedstock_root/build_artifacts/altair_1675180856922/work
-anyio @ file:///home/conda/feedstock_root/build_artifacts/anyio_1666191106763/work/dist
-argon2-cffi @ file:///home/conda/feedstock_root/build_artifacts/argon2-cffi_1640817743617/work
-argon2-cffi-bindings @ file:///home/conda/feedstock_root/build_artifacts/argon2-cffi-bindings_1666850768662/work
-arrow==1.3.0
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1670263926556/work
-async-generator==1.10
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1671632566681/work
-Babel @ file:///home/conda/feedstock_root/build_artifacts/babel_1677767029043/work
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
-backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1618230623929/work
-Backtesting==0.3.3
-beautifulsoup4 @ file:///home/conda/feedstock_root/build_artifacts/beautifulsoup4_1675252249248/work
-bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1674535352125/work
-blinker @ file:///home/conda/feedstock_root/build_artifacts/blinker_1664823096650/work
-bokeh==3.3.4
-Bottleneck @ file:///home/conda/feedstock_root/build_artifacts/bottleneck_1674242876950/work
-brotlipy @ file:///home/conda/feedstock_root/build_artifacts/brotlipy_1666764671472/work
-cached-property @ file:///home/conda/feedstock_root/build_artifacts/cached_property_1615209429212/work
-certifi==2022.12.7
-certipy==0.1.3
-cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1671179353105/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1661170624537/work
-click @ file:///home/conda/feedstock_root/build_artifacts/click_1666798198223/work
-cloudpickle @ file:///home/conda/feedstock_root/build_artifacts/cloudpickle_1674202310934/work
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
-colorcet==3.1.0
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1670575068857/work
-conda==23.1.0
-conda-package-handling @ file:///home/conda/feedstock_root/build_artifacts/conda-package-handling_1669907009957/work
-conda_package_streaming @ file:///home/conda/feedstock_root/build_artifacts/conda-package-streaming_1669733752472/work
-contourpy @ file:///home/conda/feedstock_root/build_artifacts/contourpy_1673633665736/work
-cryptography @ file:///home/conda/feedstock_root/build_artifacts/cryptography-split_1677821274828/work
-cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1635519461629/work
-Cython @ file:///home/conda/feedstock_root/build_artifacts/cython_1673054058583/work
-cytoolz @ file:///home/conda/feedstock_root/build_artifacts/cytoolz_1666829662037/work
-dask @ file:///home/conda/feedstock_root/build_artifacts/dask-core_1677707033352/work
-debugpy @ file:///home/conda/feedstock_root/build_artifacts/debugpy_1674522362098/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-defusedxml @ file:///home/conda/feedstock_root/build_artifacts/defusedxml_1615232257335/work
-dill @ file:///home/conda/feedstock_root/build_artifacts/dill_1666603105584/work
-distributed @ file:///home/conda/feedstock_root/build_artifacts/distributed_1677711074949/work
-entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1643888246732/work
-et-xmlfile @ file:///home/conda/feedstock_root/build_artifacts/et_xmlfile_1674664118162/work
-exceptiongroup==1.2.0
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1667317341051/work
-fastjsonschema @ file:///home/conda/feedstock_root/build_artifacts/python-fastjsonschema_1677336799617/work/dist
-filelock==3.13.1
-flit_core @ file:///home/conda/feedstock_root/build_artifacts/flit-core_1667734568827/work/source/flit_core
-fonttools @ file:///home/conda/feedstock_root/build_artifacts/fonttools_1666827107856/work
-fqdn==1.5.1
-fsspec @ file:///home/conda/feedstock_root/build_artifacts/fsspec_1674184942191/work
-gmpy2 @ file:///home/conda/feedstock_root/build_artifacts/gmpy2_1666808654411/work
-greenlet @ file:///home/conda/feedstock_root/build_artifacts/greenlet_1674937639600/work
-h5py @ file:///home/conda/feedstock_root/build_artifacts/h5py_1675704794369/work
-HeapDict==1.0.1
-holoviews==1.18.3
-hvplot==0.9.2
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1663625384323/work
-imagecodecs @ file:///home/conda/feedstock_root/build_artifacts/imagecodecs_1674483071022/work
-imageio @ file:///home/conda/feedstock_root/build_artifacts/imageio_1677507485990/work
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1672612343532/work
-importlib-resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1676919000169/work
-iniconfig==2.0.0
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1676322140253/work
-ipympl @ file:///home/conda/feedstock_root/build_artifacts/ipympl_1676535632179/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1677617093347/work
-ipython-genutils==0.2.0
-ipywidgets @ file:///home/conda/feedstock_root/build_artifacts/ipywidgets_1671720089366/work
-isoduration==20.11.0
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1669134318875/work
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1654302431367/work
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1663332044897/work
-json5 @ file:///home/conda/feedstock_root/build_artifacts/json5_1600692310011/work
-jsonpointer==2.4
-jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema-meta_1669810440410/work
-jupyter-events @ file:///home/conda/feedstock_root/build_artifacts/jupyter_events_1673559782596/work
-jupyter-telemetry @ file:///home/conda/feedstock_root/build_artifacts/jupyter_telemetry_1605173804246/work
-jupyter-ydoc @ file:///home/conda/feedstock_root/build_artifacts/jupyter_ydoc_1666787957071/work
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1676579893731/work
-jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1675109846004/work
-jupyter_server @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_1676476189852/work
-jupyter_server_fileid @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_fileid_1677220209229/work
-jupyter_server_terminals @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_terminals_1673491454549/work
-jupyter_server_ydoc @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_ydoc_1670336875371/work
-jupyterhub @ file:///home/conda/feedstock_root/build_artifacts/jupyterhub-feedstock_1674846153717/work
-jupyterlab @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_1675434409800/work
-jupyterlab-pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1649936611996/work
-jupyterlab-widgets @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_widgets_1671722028097/work
-jupyterlab_server @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_server_1673884094295/work
-kiwisolver @ file:///home/conda/feedstock_root/build_artifacts/kiwisolver_1666805701884/work
-libmambapy @ file:///home/conda/feedstock_root/build_artifacts/mamba-split_1676028923660/work/libmambapy
-linkify-it-py==2.0.3
-llvmlite==0.39.1
-locket @ file:///home/conda/feedstock_root/build_artifacts/locket_1650660393415/work
-lz4 @ file:///home/conda/feedstock_root/build_artifacts/lz4_1675806673645/work
-Mako @ file:///home/conda/feedstock_root/build_artifacts/mako_1668568582731/work
-mamba @ file:///home/conda/feedstock_root/build_artifacts/mamba-split_1676028923660/work/mamba
-Markdown==3.5.2
-markdown-it-py==3.0.0
-MarkupSafe @ file:///home/conda/feedstock_root/build_artifacts/markupsafe_1674135787083/work
-matplotlib @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-suite_1676406361850/work
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
-mdit-py-plugins==0.4.0
-mdurl==0.1.2
-mistune @ file:///home/conda/feedstock_root/build_artifacts/mistune_1675771498296/work
-mpmath @ file:///home/conda/feedstock_root/build_artifacts/mpmath_1612895720168/work
-msgpack @ file:///home/conda/feedstock_root/build_artifacts/msgpack-python_1666755075942/work
-munkres==1.1.4
-nbclassic @ file:///home/conda/feedstock_root/build_artifacts/nbclassic_1676729186918/work
-nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1669795076334/work
-nbconvert @ file:///home/conda/feedstock_root/build_artifacts/nbconvert-meta_1674590374792/work
-nbformat @ file:///home/conda/feedstock_root/build_artifacts/nbformat_1673560067442/work
-neat-python==0.92
-nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1664684991461/work
-networkx @ file:///home/conda/feedstock_root/build_artifacts/networkx_1673151334029/work
-notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1667565639349/work
-notebook_shim @ file:///home/conda/feedstock_root/build_artifacts/notebook-shim_1667478401171/work
-numba @ file:///home/conda/feedstock_root/build_artifacts/numba_1669103970038/work
-numexpr @ file:///home/conda/feedstock_root/build_artifacts/numexpr_1666816709487/work
-numpy @ file:///home/conda/feedstock_root/build_artifacts/numpy_1668919096861/work
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.19.3
-nvidia-nvjitlink-cu12==12.4.99
-nvidia-nvtx-cu12==12.1.105
-oauthlib @ file:///home/conda/feedstock_root/build_artifacts/oauthlib_1666056362788/work
-opencv-python==4.9.0.80
-openpyxl==3.1.1
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1673482170163/work
-pamela==1.0.0
-pandas==1.5.3
-pandas-ta==0.3.14b0
-pandocfilters @ file:///home/conda/feedstock_root/build_artifacts/pandocfilters_1631603243851/work
-panel==1.3.8
-param==2.0.2
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
-partd @ file:///home/conda/feedstock_root/build_artifacts/partd_1660316728562/work
-pathlib==1.0.1
-patsy @ file:///home/conda/feedstock_root/build_artifacts/patsy_1665356157073/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1667297516076/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-Pillow @ file:///home/conda/feedstock_root/build_artifacts/pillow_1675487172403/work
-pkgutil_resolve_name @ file:///home/conda/feedstock_root/build_artifacts/pkgutil-resolve-name_1633981968097/work
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1675735718929/work
-pluggy==1.4.0
-pooch @ file:///home/conda/feedstock_root/build_artifacts/pooch_1677600624926/work
-prometheus-client @ file:///home/conda/feedstock_root/build_artifacts/prometheus_client_1674535637125/work
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1677600924538/work
-protobuf==4.21.12
-psutil @ file:///home/conda/feedstock_root/build_artifacts/psutil_1667885877572/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
-pycosat @ file:///home/conda/feedstock_root/build_artifacts/pycosat_1666836542287/work
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
-pycurl==7.45.1
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1672682006896/work
-PyJWT @ file:///home/conda/feedstock_root/build_artifacts/pyjwt_1666240235902/work
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1672659226110/work
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1652235407899/work
-pyrsistent @ file:///home/conda/feedstock_root/build_artifacts/pyrsistent_1672681463845/work
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
-pytest==8.1.1
-pytest-timeit==0.3.0
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
-python-json-logger @ file:///home/conda/feedstock_root/build_artifacts/python-json-logger_1677079630776/work
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1673864280276/work
-pyviz_comms==3.0.1
-PyWavelets @ file:///home/conda/feedstock_root/build_artifacts/pywavelets_1673082339639/work
-PyYAML @ file:///home/conda/feedstock_root/build_artifacts/pyyaml_1666772395347/work
-pyzmq @ file:///home/conda/feedstock_root/build_artifacts/pyzmq_1673612669255/work
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1673863902341/work
-rfc3339-validator @ file:///home/conda/feedstock_root/build_artifacts/rfc3339-validator_1638811747357/work
-rfc3986-validator @ file:///home/conda/feedstock_root/build_artifacts/rfc3986-validator_1598024191506/work
-ruamel.yaml @ file:///home/conda/feedstock_root/build_artifacts/ruamel.yaml_1666827327415/work
-ruamel.yaml.clib @ file:///home/conda/feedstock_root/build_artifacts/ruamel.yaml.clib_1670412719074/work
-scikit-image @ file:///home/conda/feedstock_root/build_artifacts/scikit-image_1667117143644/work
-scikit-learn @ file:///home/conda/feedstock_root/build_artifacts/scikit-learn_1674598990422/work
-scipy==1.10.1
-seaborn @ file:///home/conda/feedstock_root/build_artifacts/seaborn-split_1672497695270/work
-Send2Trash @ file:///home/conda/feedstock_root/build_artifacts/send2trash_1628511208346/work
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-sniffio @ file:///home/conda/feedstock_root/build_artifacts/sniffio_1662051266223/work
-sortedcontainers @ file:///home/conda/feedstock_root/build_artifacts/sortedcontainers_1621217038088/work
-soupsieve @ file:///home/conda/feedstock_root/build_artifacts/soupsieve_1658207591808/work
-SQLAlchemy @ file:///home/conda/feedstock_root/build_artifacts/sqlalchemy_1676679713873/work
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-statsmodels @ file:///home/conda/feedstock_root/build_artifacts/statsmodels_1667586015456/work
-sympy @ file:///home/conda/feedstock_root/build_artifacts/sympy_1666835336524/work
-TA-Lib==0.4.28
-tables @ file:///home/conda/feedstock_root/build_artifacts/pytables_1675780575586/work
-tblib @ file:///home/conda/feedstock_root/build_artifacts/tblib_1616261298899/work
-terminado @ file:///home/conda/feedstock_root/build_artifacts/terminado_1670253674810/work
-threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1643647933166/work
-tifffile @ file:///home/conda/feedstock_root/build_artifacts/tifffile_1677748842526/work
-tinycss2 @ file:///home/conda/feedstock_root/build_artifacts/tinycss2_1666100256010/work
-tomli @ file:///home/conda/feedstock_root/build_artifacts/tomli_1644342247877/work
-toolz @ file:///home/conda/feedstock_root/build_artifacts/toolz_1657485559105/work
-torch==2.2.1
-tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1666788589303/work
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1662214488106/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1675110562325/work
-triton==2.2.0
-types-python-dateutil==2.8.19.20240106
-typing_extensions==4.10.0
-uc-micro-py==1.0.3
-unicodedata2 @ file:///home/conda/feedstock_root/build_artifacts/unicodedata2_1667239886688/work
-uri-template==1.3.0
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1673452138552/work
-visualize==0.5.1
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1673864653149/work
-webcolors==1.13
-webencodings==0.5.1
-websocket-client @ file:///home/conda/feedstock_root/build_artifacts/websocket-client_1675567828044/work
-widgetsnbextension @ file:///home/conda/feedstock_root/build_artifacts/widgetsnbextension_1672066693230/work
-xlrd @ file:///home/conda/feedstock_root/build_artifacts/xlrd_1610224409810/work
-xyzservices==2023.10.1
-y-py @ file:///home/conda/feedstock_root/build_artifacts/y-py_1677231008299/work
-ypy-websocket @ file:///home/conda/feedstock_root/build_artifacts/ypy-websocket_1670333059911/work
-zict @ file:///home/conda/feedstock_root/build_artifacts/zict_1651156074437/work
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1677313463193/work
-zstandard==0.19.0
+holoviews
+panel
+pathlib
+scipy
+numpy
+pandas
